# schellings_model

./: .gitignore  Cargo.toml  benchmark.sh  readme.md  readmeRU.md
src/: benchmarks.rs  lib.rs  logic.rs  main.rs  simulation.rs  sm.rs
