[package]
name = "schellings_model"
authors = ["GreatC0der", "Other contributors"]
version = "1.2.1"
edition = "2021"
description = "Schelling's model written in rust."
readme = "https://notabug.org/GreatC0der/schellings_model/src/master/readme.md"
homepage = "https://notabug.org/GreatC0der/schellings_model"
documentation = "https://notabug.org/GreatC0der/schellings_model#key-bindings"
repository = "https://notabug.org/GreatC0der/schellings_model"
license = "GPLv3"
license-file = "https://notabug.org/GreatC0der/schellings_model/src/master/LICENSE.txt"
keywords = ["schellings", "model", "simulation"]
categories = ["GUI", "simulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "4.1.0"
rand = "0.8.5"
sdl2 = {version = "0.35.2", features = ["ttf"]}
sys-locale = "0.3.0"
