[package]
name = "schellings_model"
authors = ["GreatC0der", "Other contributors"]
version = "1.3.2"
edition = "2021"
description = "Schelling's model written in rust."
readme = "readme.md"
homepage = "https://github.com/GreatC0der/schellings_model/blob/master/readme.md"
documentation = "https://github.com/GreatC0der/schellings_model/blob/master/readme.md#key-bindings"
repository = "https://github.com/GreatC0der/schellings_model"
license = "GPL-3.0-only"
keywords = ["schellings", "model", "simulation"]
categories = ["GUI", "simulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "4.1.0"
rand = "0.8.5"
sdl2 = {version = "0.35.2", features = ["ttf"]}
